Modifico vis./Agrego .css

--- a/dataviz_1/index.html
+++ b/dataviz_1/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chart 14 - Area Mark A</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Visualizacion 1</title>
     <style>
       #chart {
         overflow-y: auto;
@@ -15,7 +16,7 @@
     </style>
   </head>
   <body>
-
+    <h1>Cantidad de horas de mision realizadas segun su profesion, edad y sexo</h1>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
