--- a/dataviz_2/index.html
+++ b/dataviz_2/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chart 14 - Area Mark A</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Visualizacion 2</title>
     <style>
       #chart {
         overflow-y: auto;
@@ -15,8 +16,10 @@
     </style>
   </head>
   <body>
-
-    <div id="chart"></div>
+    <h1>EEUU vs Rusia</h1>
+    <p>Comparacion de cantidad total de horas de mision realizadas entre 2010 y 2019 por EEUU y Rusia</p>
+    <div id="chart1"></div>
+    <div id="chart2"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
