--- a/dataviz_3/index.html
+++ b/dataviz_3/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chart 14 - Area Mark A</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Visualizacion 3</title>
     <style>
       #chart {
         overflow-y: auto;
@@ -15,7 +16,8 @@
     </style>
   </head>
   <body>
-
+    <h1>Horas de mision por pais</h1>
+    <p>USSR/Rusia lidera la cantidad de horas de vuelo acumuladas en relacion a los demas paises junto con EEUU</p>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
