--- a/dataviz_1/index.html
+++ b/dataviz_1/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <h1>Cantidad de horas de mision realizadas segun su profesion, edad y sexo</h1>
+    <h1>Cantidad de horas de mision realizadas segun profesion, edad y sexo</h1>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
