--- a/dataviz_3/index.html
+++ b/dataviz_3/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1>Horas de mision por pais</h1>
-    <p>USSR/Rusia lidera la cantidad de horas de vuelo acumuladas en relacion a los demas paises junto con EEUU</p>
+    <p>USSR/Rusia, junto a EEUU, lideran la cantidad de horas de vuelo acumuladas</p>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
