--- a/dataviz_2/index.html
+++ b/dataviz_2/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1>EEUU vs Rusia</h1>
-    <p>Comparacion de cantidad total de horas de mision realizadas entre 2010 y 2019 por EEUU y Rusia</p>
+    <p>Comparacion de la cantidad total de horas de mision realizadas entre 2010 y 2019 por EEUU y Rusia</p>
     <div id="chart1"></div>
     <div id="chart2"></div>
 
