--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Botones de visualización</title>
+    <title>Explicar con Datos</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Selecciona una visualización:</h1>
     <div class="button-container">
-      <a href="dataviz_1/index.html"><button class="button">Visualización 1</button></a>
-      <a href="dataviz_2/index.html"><button class="button">Visualización 2</button></a>
-      <a href="dataviz_3/index.html"><button class="button">Visualización 3</button></a>
-      <a href="dataviz_4/index.html"><button class="button">Visualización 4</button></a>
+      <a href="dataviz_1/index.html"><button class="button">La preponderancia del sexo masculino</button></a>
+      <a href="dataviz_2/index.html"><button class="button">EEUU vs. Rusia</button></a>
+      <a href="dataviz_3/index.html"><button class="button">Horas de mision por pais</button></a>
+      <a href="dataviz_4/index.html"><button class="button">La ocupación con más horas de misión por año</button></a>
     </div>
   </body>
 </html>
