Modificaciones de vis4 y agrego /exploracion

--- a/dataviz_1/index.html
+++ b/dataviz_1/index.html
@@ -16,7 +16,8 @@
     </style>
   </head>
   <body>
-    <h1>Cantidad de horas de mision realizadas segun profesion, edad y sexo</h1>
+    <h1>La preponderancia del sexo masculino</h1>
+    <p>Sin importar la edad o profesion, los hombres representan la gran mayoria de horas de mision acumuladas</p>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
