--- a/dataviz_4/index.html
+++ b/dataviz_4/index.html
@@ -17,7 +17,8 @@
   </head>
   <body>
     
-    <h1>Ingenieros Aeroespaciales: la ocupación con más horas de misión por año</h1>
+    <h1>2016: más de 70,000 hs de misión</h1>
+    <p>El 2016 fue el año con más horas de misión acumuladas</p>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
