--- a/exploracion/primeroa_prueba/index.html
+++ b/exploracion/primeroa_prueba/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
-    <title>Visualizacion 1</title>
+    <title>Chart 14 - Area Mark A</title>
     <style>
       #chart {
         overflow-y: auto;
@@ -16,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h1>Exploracion</h1>
+
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
